tests/parser/statement_if_err2.expected
Syntax Error: line 3:
Unexpected token (TOK_KEY_THEN, 'then'), likely missing a(n)  
  'TOK_LPAREN' or
  'TOK_KEY_NOT' or
  'TOK_RPAREN' or
Possibly due to malformed or missing:
  Non-terminal: 'Condition'
