tests/parser/statement_if_err2.mtp
begin
	(*if statement with no condition*)
	if then
		sample := 0
	else
		sample := 1;
end
.